--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ target/classes/BigIntegerSpliterator.class
 target/maven-archiver/pom.properties
 
 target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+
+*.beam
