--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ target/maven-archiver/pom.properties
 target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
 
 *.beam
+
+*.pyc
